# alki-forecast

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: default.yaml  model_matrix.yaml  model_matrix_tuned.yaml  random.yaml
data/raw/: train set.csv
notebooks/01_eda/: dataloader_check.ipynb  eda.ipynb
notebooks/02_feature_engineering/: features.ipynb
notebooks/03_model_experiments/: model_exp.ipynb
src/data/: loader.py  preprocess.py  validation.py
src/eval/: run_baselines.py  run_candidates.py  tuner.py
src/features/: build_features.py  future_features.py  holiday_features.py
src/models/: arima_like.py  gbm.py  prophet_model.py
src/pipeline/: per_customer.py  plot_forecasts.py  run_eda.py  run_forecast.py  run_preprocess.py  run_training.py  run_tuning.py  save_models_and_forecast.py
src/utils/: ml_safety.py  peak_metrics.py  timeseries_split.py
